# applogo

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: clipboard.rs  collage.rs  config.rs  contents_json.rs  device.rs  generate_logo.rs  main.rs  mockup.rs  record.rs  resize.rs  screenshot.rs  tts.rs  video_title.rs  watch.rs  zip.rs
