[package]
name = "applogo"
version = "0.1.0"
edition = "2021"
description = "Generate app icons and device mockups from a single image"
license = "MIT"

[dependencies]
image = "0.25"
zip = { version = "2", default-features = false, features = ["deflate"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
arboard = "3"
