[package]
name = "launch"
version = "0.3.4"
edition = "2021"
description = "App launch toolkit — icons, mockups, and more"
license = "MIT"

[dependencies]
image = "0.25"
zip = { version = "2", default-features = false, features = ["deflate"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
arboard = "3"
png = "0.18"
ab_glyph = "0.2"
imageproc = "0.25"
ctrlc = "3"
